이것저것 추가ed

--- a/md_subjects.ipynb
+++ b/md_subjects.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,20 +21,20 @@
        "(91335, 39)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sub_df = pd.read_csv('소상공인시장진흥공단_상가업소정보_의료기관_201909.csv',\n",
+    "sub_df = pd.read_csv('./raw/소상공인시장진흥공단_상가업소정보_의료기관_201909.csv',\n",
     "                     encoding='cp949')\n",
     "sub_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4    경기도  용인시 수지구   약국/한약방       약국  의약품 및 의료용품 소매업  더블유스토어수지점"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,18 +178,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 결측치 확인\n",
     "sub_df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +344,7 @@
        "[379 rows x 6 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +446,7 @@
        "4    경기도  용인시 수지구   약국/한약방       약국  의약품 및 의료용품 소매업  더블유스토어수지점"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +477,7 @@
        "       dtype=object))"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +488,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['경기도', '서울특별시', '부산광역시', '강원도', '충청북도', '경상남도', '전라남도', '경상북도',\n",
+       "       '광주광역시', '대구광역시', '충청남도', '인천광역시', '전라북도', '대전광역시', '울산광역시',\n",
+       "       '제주특별자치도', '세종특별자치시'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub_df['시도명'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2634, 21374,  4973,  4141,  3214,  4597,  3067,  6473, 18943,\n",
+       "         353,  1997,  4722,  3224,  3894,  1095,  3578,  2677],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 지역별 전체 갯수\n",
+    "total_counts = sub_df.groupby('시도명')['상호명'].count()\n",
+    "total_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -591,15 +638,374 @@
        "[523 rows x 1 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = sub_df.groupby(by=['시도명', '상권업종소분류명'])[['상호명']].count()\n",
-    "a\n",
-    "# a.to_csv('cla.csv', encoding='cp949')"
+    "geo_subs = sub_df.groupby(by=['시도명', '상권업종소분류명'])[['상호명']].count()\n",
+    "geo_subs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# geo_subs.to_csv('geo_subs_count.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.info of Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agg_subs = pd.DataFrame()\n",
+    "agg_subs.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for locs in sub_df['시도명'].unique():\n",
+    "    loc = (geo_subs.xs(locs, level='시도명') / total_counts[locs]).reset_index(drop=False)\n",
+    "    loc['시도명'] = locs\n",
+    "    loc['기관수'] = geo_subs.loc[locs, '상호명'].reset_index(drop=True)\n",
+    "\n",
+    "    agg_subs = pd.concat([agg_subs, loc], axis=0, ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>상권업종소분류명</th>\n",
+       "      <th>상호명</th>\n",
+       "      <th>시도명</th>\n",
+       "      <th>기관수</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>기타병원</td>\n",
+       "      <td>0.049920</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>1067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>내과/외과</td>\n",
+       "      <td>0.110789</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>2368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>노인/치매병원</td>\n",
+       "      <td>0.009825</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>동물병원</td>\n",
+       "      <td>0.046412</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>비뇨기과</td>\n",
+       "      <td>0.010246</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>518</th>\n",
+       "      <td>치과의원</td>\n",
+       "      <td>0.152975</td>\n",
+       "      <td>세종특별자치시</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>519</th>\n",
+       "      <td>탕제원</td>\n",
+       "      <td>0.002833</td>\n",
+       "      <td>세종특별자치시</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>피부과</td>\n",
+       "      <td>0.014164</td>\n",
+       "      <td>세종특별자치시</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>521</th>\n",
+       "      <td>한약방</td>\n",
+       "      <td>0.016997</td>\n",
+       "      <td>세종특별자치시</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>522</th>\n",
+       "      <td>한의원</td>\n",
+       "      <td>0.141643</td>\n",
+       "      <td>세종특별자치시</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>523 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    상권업종소분류명       상호명      시도명   기관수\n",
+       "0       기타병원  0.049920      경기도  1067\n",
+       "1      내과/외과  0.110789      경기도  2368\n",
+       "2    노인/치매병원  0.009825      경기도   210\n",
+       "3       동물병원  0.046412      경기도   992\n",
+       "4       비뇨기과  0.010246      경기도   219\n",
+       "..       ...       ...      ...   ...\n",
+       "518     치과의원  0.152975  세종특별자치시    54\n",
+       "519      탕제원  0.002833  세종특별자치시     1\n",
+       "520      피부과  0.014164  세종특별자치시     5\n",
+       "521      한약방  0.016997  세종특별자치시     6\n",
+       "522      한의원  0.141643  세종특별자치시    50\n",
+       "\n",
+       "[523 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agg_subs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>시도명</th>\n",
+       "      <th>상권업종소분류명</th>\n",
+       "      <th>기관수</th>\n",
+       "      <th>기관비</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>경기도</td>\n",
+       "      <td>기타병원</td>\n",
+       "      <td>1067</td>\n",
+       "      <td>0.049920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>경기도</td>\n",
+       "      <td>내과/외과</td>\n",
+       "      <td>2368</td>\n",
+       "      <td>0.110789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>경기도</td>\n",
+       "      <td>노인/치매병원</td>\n",
+       "      <td>210</td>\n",
+       "      <td>0.009825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>경기도</td>\n",
+       "      <td>동물병원</td>\n",
+       "      <td>992</td>\n",
+       "      <td>0.046412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>경기도</td>\n",
+       "      <td>비뇨기과</td>\n",
+       "      <td>219</td>\n",
+       "      <td>0.010246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>518</th>\n",
+       "      <td>세종특별자치시</td>\n",
+       "      <td>치과의원</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0.152975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>519</th>\n",
+       "      <td>세종특별자치시</td>\n",
+       "      <td>탕제원</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.002833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>세종특별자치시</td>\n",
+       "      <td>피부과</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.014164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>521</th>\n",
+       "      <td>세종특별자치시</td>\n",
+       "      <td>한약방</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.016997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>522</th>\n",
+       "      <td>세종특별자치시</td>\n",
+       "      <td>한의원</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.141643</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>523 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         시도명 상권업종소분류명   기관수       기관비\n",
+       "0        경기도     기타병원  1067  0.049920\n",
+       "1        경기도    내과/외과  2368  0.110789\n",
+       "2        경기도  노인/치매병원   210  0.009825\n",
+       "3        경기도     동물병원   992  0.046412\n",
+       "4        경기도     비뇨기과   219  0.010246\n",
+       "..       ...      ...   ...       ...\n",
+       "518  세종특별자치시     치과의원    54  0.152975\n",
+       "519  세종특별자치시      탕제원     1  0.002833\n",
+       "520  세종특별자치시      피부과     5  0.014164\n",
+       "521  세종특별자치시      한약방     6  0.016997\n",
+       "522  세종특별자치시      한의원    50  0.141643\n",
+       "\n",
+       "[523 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agg_subs = agg_subs[['시도명', '상권업종소분류명', '기관수', '상호명']]\n",
+    "agg_subs = agg_subs.rename(columns={'상호명':'기관비'})\n",
+    "agg_subs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 피벗 보기\n",
+    "\n",
+    "sub_pivot = pd.pivot_table(agg_subs, index='시도명', columns='상권업종소분류명',\n",
+    "               values='기관비')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sub_pivot.to_csv('sub_pivot.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sub_df.to_csv('sub.csv', encoding='cp949')"
    ]
   }
  ],
